--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "dependencies": {
     "@angular/tsc-wrapped": "^4.1.2",
     "@types/node": "^7.0.18",
+    "cpx": "^1.5.0",
     "gulp-inline-ng2-template": "^4.0.0",
     "node-sass": "^4.5.3",
+    "rimraf": "^2.6.1",
     "rollup": "^0.41.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "sorcery": "^0.10.0",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.2",
@@ -17,9 +20,14 @@
     "vinyl-fs": "^2.4.4"
   },
   "devDependencies": {
-    "@angular/core": "^4.1.2"
+    "@angular/common": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "rxjs": "^5.4.0",
+    "zone.js": "^0.8.10"
   },
   "scripts": {
-    "build": "ts-node ng-build.ts"
+    "build": "node build.js --src sample"
   }
 }
