--- a/sample/tsconfig.lib.json
+++ b/sample/tsconfig.lib.json
@@ -13,7 +13,7 @@
     "target": "es2015",
     "module": "es2015",
     "moduleResolution": "node",
-    "outDir": "",
+    "outDir": "src",
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
