--- a/tsconfig.packagr.json
+++ b/tsconfig.packagr.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "lib": ["es2015", "dom"],
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "../../dist/tools/ng-packagr",
+    "sourceMap": true,
+    "declaration": true,
+    "lib": ["es2015", "dom"],
+    "outDir": "dist/lib",
+    "experimentalDecorators": true,
     "noEmitOnError": true,
     "noImplicitAny": false,
-    "target": "es5",
     "types": [
       "node"
     ]
   },
   "files": [
-    "ng-packagr.ts"
+    "lib/ng-packagr.ts"
   ]
 }
