--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@angular/tsc-wrapped": "^4.1.2",
-    "@types/node": "^7.0.18",
     "cpx": "^1.5.0",
     "gulp-inline-ng2-template": "^4.0.0",
     "minimist": "^1.2.0",
@@ -29,15 +28,19 @@
     "@angular/core": "^4.1.3",
     "@angular/http": "^4.1.3",
     "@angular/platform-browser": "^4.1.3",
+    "@types/node": "^7.0.18",
     "rxjs": "^5.4.0",
+    "standard-version": "^4.0.0",
     "zone.js": "^0.8.10"
   },
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.packagr.json",
-    "postbuild": "cpx '{cli/*,LICENSE,README.md}' dist",
-    "sample": "node sample/build.js",
-    "prepublish": "node prepublish.js"
+    "postbuild": "cpx 'cli/*' dist",
+    "prerelease": "yarn build",
+    "release": "standard-version --first-release --pre-release alpha",
+    "postrelease": "node prepublish.js",
+    "sample": "node sample/build.js"
   }
 }
