--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prerelease": "yarn build",
     "release": "standard-version --first-release --pre-release alpha",
     "postrelease": "node prepublish.js",
-    "sample": "node sample/build.js"
+    "sample": "node dist/cli/ng-packagr.js",
+    "sample:dev": "node sample/build.js"
   }
 }
