--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "prerelease": "yarn build",
     "release": "standard-version --first-release --pre-release alpha",
     "postrelease": "node prepublish.js",
-    "sample": "node dist/cli/ng-packagr.js",
-    "sample:dev": "node sample/build.js"
+    "sample": "node dist/cli/ng-packagr.js -p integration/sample/ng-package.json",
+    "sample:dev": "node integration/sample/build.js -p integration/sample/ng-package.json"
   }
 }
