--- a/package.json
+++ b/package.json
@@ -34,15 +34,17 @@
     "@angular/http": "^4.1.3",
     "@angular/platform-browser": "^4.1.3",
     "@types/node": "^7.0.18",
+    "json-schema-to-typescript": "^4.4.0",
     "rxjs": "^5.4.0",
     "standard-version": "^4.0.0",
     "zone.js": "^0.8.10"
   },
   "private": true,
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist && yarn schema",
     "build": "tsc -p tsconfig.packagr.json",
     "postbuild": "cpx 'cli/*' dist/cli",
+    "schema": "json2ts --input lib/conf/ng-package.schema.json --output lib/conf/ng-package.conf.ts",
     "prerelease": "yarn build",
     "release": "standard-version --prerelease alpha",
     "postrelease": "node prepublish.js",
