test: integration testing w/ sample lib and consumer apps (#13)
For integration testing, build one (ore more) `sample` libraries. Consumer `app` depends on `sample`. Then, build the consumer applications to verify that their build tools link correctly against the distributables produced by `ng-packagr`. For now, we have two consumers: a plain `tsc` build and a full-feature `ng` CLI w/ webpack under the hood. The `tsc` build should link against the `main` (es5/umd) bundle file of `sample`. The `ng` build (webpack) should link against the `module` (es5/esm) bundle file of `sample`. Both consumers should build in different scenarios: targets `es5` and `es2015`, module formats `commonjs`, `umd`, `es2015`, w/ AoT compilation and JiT compilation, w/ sourcemaps and w/o sourcemaps. Currently, there is an issue with the webpack dev build, encountering an error when resolving sourcemaps of the `sample` lib – this is an issue of `ng-packagr`.

--- a/integration/consumer-ng-cli/package.json
+++ b/integration/consumer-ng-cli/package.json
@@ -6,6 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:dev": "ng build --target development",
+    "build:prod:jit": "ng build --target production",
+    "build:prod:aot": "ng build --target production --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
