--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "buildOnSave": false,
   "compileOnSave": false,
   "compilerOptions": {
+    "target": "es5",
     "experimentalDecorators": true,
     "lib": [
       "es2015",
