test: two integration testing samples
- one `sample` and `sample_angular`

--- a/integration/sample/package.json
+++ b/integration/sample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@foo/bar",
+  "name": "@sample/one",
   "version": "1.0.0-alpha.0",
   "repository": "https://github.com/dherges/ng-packagr.git",
   "author": "david <david@spektrakel.de>",
