--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,17 @@ machine:
 dependencies:
   override:
     - yarn
-  cache_directories:
-    - ~/.cache/yarn
+  pre:
+    - rm -rf node_modules
+    - yarn cache clean
+    - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
 
 test:
   override:
     - yarn test
+
+deployment:
+  npm:
+    tag: /v[0-9]+(\.[0-9]+){2}/
+    commands:
+      - yarn publish:ci
