--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ test:
 
 deployment:
   npm:
-    tag: /v[0-9]+(\.[0-9]+){2}/
+    tag: /v[0-9]+(\.[0-9]+){2}(-.*)*/
+    owner: dherges
     commands:
       - yarn publish:ci
