test: sample libraries to reflect style of core, material, custom (#38)
Add testing tools and frameworks.
Update the three sample libraries to reflect different styles of authoring:
- `core`: folder layout from `@angular/core` package
- `material`: folder layout from `@angular/material` package
- `custom`: a custom folder layout with non-scoped `sample-custom` library name
All styles of authoring should be supported by `ng-packagr` and result in a good Angular Package format! See #23 
Assert that the generated Angular Package of `@sample/core` adheres to the conventions. The `package.ts` spec writes down the conventions in a mocha/chai spec file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
       "es2016"
     ],
     "types": [
-      "node"
+      "chai",
+      "mocha",
+      "node",
+      "sinon"
     ]
   },
   "exclude": [
