--- a/integration/sample_core/package.json
+++ b/integration/sample_core/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "@sample/angular",
-  "description": "A library in the file layout of angular core packages",
+  "name": "@sample/core",
+  "description": "A sample library with folder layout from Angular core packages",
   "version": "1.0.0-pre.0",
+  "private": true,
+  "repository": "https://github.com/dherges/ng-packagr.git",
   "peerDependencies": {
     "@angular/common": "^4.1.3",
     "@angular/core": "^4.1.3",
