--- a/package.json
+++ b/package.json
@@ -33,9 +33,17 @@
     "@angular/core": "^4.1.3",
     "@angular/http": "^4.1.3",
     "@angular/platform-browser": "^4.1.3",
+    "@types/chai": "^4.0.0",
+    "@types/jasmine": "^2.5.51",
+    "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.18",
+    "@types/sinon": "^2.3.0",
+    "chai": "^4.0.1",
+    "jasmine": "^2.6.0",
     "json-schema-to-typescript": "^4.4.0",
+    "mocha": "^3.4.2",
     "rxjs": "^5.4.0",
+    "sinon": "^2.3.2",
     "standard-version": "^4.0.0",
     "zone.js": "^0.8.10"
   },
@@ -49,10 +57,9 @@
     "release": "standard-version --prerelease pre",
     "postrelease": "node prepublish.js",
     "publish:ci": "yarn prerelease && yarn postrelease",
-    "sample": "node dist/cli/ng-packagr.js -p integration/sample/ng-package.json",
-    "sample:dev": "node integration/sample/build.js",
-    "sampleng": "node dist/cli/ng-packagr.js -p integration/sample_angular/ng-package.json",
-    "sampleng:dev": "node integration/sample_angular/build.js",
-    "test": "yarn build && yarn sample"
+    "samples": "node dist/cli/ng-packagr.js -p integration/sample_core/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_custom/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_material/ng-package.json",
+    "samples:dev": "node integration/build.js",
+    "samples:test": "mocha --compilers ts:ts-node/register integration/sample_*/specs/**/*.ts",
+    "test": "yarn build && yarn samples && yarn samples:test"
   }
 }
