--- a/tsconfig.packagr.json
+++ b/tsconfig.packagr.json
@@ -4,6 +4,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
+    "inlineSourceMap": false,
+    "inlineSources": true,
     "declaration": true,
     "lib": ["es2015", "dom"],
     "outDir": "dist/lib",
