test: `@sample/core` and `@sample/custom` (#39)
For `@sample/core`:
Write one spec file per build artefact, making spec sources more readable.
Assert references to build artefacts from `package.json`.
For `@sample/custom`, use cases covered in the tests are:
- assert that `templateUrl` and `styleUrls` are inlined in the `*.metadata.json`.
- assert scss-rendered styles in `*.metadata.json`.
- assert re-exported internal symbols in `*.metadata.json` and `*.d.ts`
- assert folder structure

Compile only `spec/*.ts` files for test runs, making them slightly faster.

--- a/integration/tsconfig.specs.json
+++ b/integration/tsconfig.specs.json
@@ -2,7 +2,7 @@
   "buildOnSave": false,
   "compileOnSave": false,
   "compilerOptions": {
-    "moduleResolution": "node",
+    "target": "es5",
     "experimentalDecorators": true,
     "lib": [
       "es2015",
@@ -15,6 +15,9 @@
       "sinon"
     ]
   },
+  "include": [
+    "**/specs/*.ts"
+  ],
   "exclude": [
     ".ng_build"
   ]
