--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,10 @@ dependencies:
     - rm -rf node_modules
     - yarn cache clean
     - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+    - yarn global add greenkeeper-lockfile@1
+    - greenkeeper-lockfile-update
+  post:
+    - greenkeeper-lockfile-upload
 
 test:
   override:
