chore: npm keywords for discovery (#42)

--- a/package.json
+++ b/package.json
@@ -2,6 +2,21 @@
   "name": "ng-packagr",
   "version": "1.0.0-pre.1",
   "description": "Compile and package a TypeScript library to Angular Package Format",
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "angular-seed",
+    "angular-library",
+    "angular-starter-kit",
+    "angular-components",
+    "components",
+    "component-library",
+    "typescript",
+    "css",
+    "scss",
+    "html"
+  ],
   "author": "David Herges <david@spektrakel.de>",
   "license": "MIT",
   "repository": "https://github.com/dherges/ng-packagr.git",
