build: fix windows builds
Arhhh...git bash on windows with npm scripts...somehow files didn't get copied to dist folder. Broke the 1.0.0-pre2. release.

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   "scripts": {
     "prebuild": "rimraf dist && yarn schema",
     "build": "tsc -p tsconfig.packagr.json",
-    "postbuild": "copyfiles 'cli/*' dist && copyfiles -f 'lib/ng-package.schema.json' dist && copyfiles 'lib/conf/**/*.json' dist",
+    "postbuild": "node postbuild.js",
     "schema": "json2ts --input lib/ng-package.schema.json --output lib/ng-package.schema.ts",
     "prerelease": "yarn build",
     "release": "standard-version --prerelease pre",
