fix: correct paths in generated sourcemaps (#50)
When compiling with `tsc` (the FESM5 bundle file), the source map files goes corrupt. Manually fix paths there and enable the source map chain again. Source maps now reflect back to closure-annotated source files. See #46 

Also, relocate source paths in final `*.js.map` files. Motivation: source files now show up with a common prefix `@<scope>/<name>`, making it more intuitive to find sources of the library in dev tools. For example, in `ng` CLI sources would show up in the `webpack://~/@sample/material`  or  `webpack://~/sample-custom` path.

--- a/integration/consumer-tsc/tsconfig.json
+++ b/integration/consumer-tsc/tsconfig.json
@@ -13,7 +13,7 @@
     ],
     "experimentalDecorators": true,
     "paths": {
-      "@foo/bar": [ "../sample/dist" ]
+      "sample-custom": [ "../sample_custom/dist" ]
     }
   },
   "files": [
