--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@angular/tsc-wrapped": "^4.1.2",
     "cpx": "^1.5.0",
+    "glob": "^7.1.2",
     "gulp-inline-ng2-template": "^4.0.0",
     "minimist": "^1.2.0",
     "mz": "^2.6.0",
