--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
   },
   "dependencies": {
     "@angular/tsc-wrapped": "^4.2.0",
+    "autoprefixer": "^7.1.1",
+    "browserslist": "^2.1.5",
     "cpx": "^1.5.0",
     "glob": "^7.1.2",
     "gulp-inline-ng2-template": "^4.0.0",
     "minimist": "^1.2.0",
     "mz": "^2.6.0",
     "node-sass": "^4.5.3",
+    "postcss": "^6.0.2",
     "rimraf": "^2.6.1",
     "rollup": "^0.42.0",
     "rollup-plugin-node-resolve": "^3.0.0",
