test: library w/ custom typings
Motivation: sometimes, we have 3rd party dependencies that ship w/o type definitions. Maybe, we don't have type definitions at DefinetlyTyped and so we have to write our own. Since ng-packagr auto-generates our tsconfig, we have to import custom type definitions via triple-slash reference.

This change adds a sample library to the integration tests, making this a legimitate and desired feature which needs to be supported.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "target": "es5",
     "lib": [
       "es2015",
       "es2016"
