--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rxjs": "^5.4.0",
     "sinon": "^2.3.2",
     "standard-version": "^4.0.0",
+    "validate-commit-msg": "^2.12.2",
     "zone.js": "^0.8.10"
   },
   "private": true,
