refactor: validate and normalized json schema
Reading the `ng-package.schema.json` through `@ngtools/json-schema` validates and normalizes default values as specified in the json. This removes the need for manual in-code checking for default values.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@angular/tsc-wrapped": "^4.2.0",
+    "@ngtools/json-schema": "^1.1.0",
     "autoprefixer": "^7.1.1",
     "browserslist": "^2.1.5",
     "cpx": "^1.5.0",
