--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/sinon": "^2.3.0",
     "chai": "^4.0.1",
     "copyfiles": "^1.2.0",
+    "husky": "^0.14.3",
     "jasmine": "^2.6.0",
     "json-schema-to-typescript": "^4.4.0",
     "mocha": "^3.4.2",
@@ -73,12 +74,13 @@
     "postbuild": "node postbuild.js",
     "schema": "json2ts --input lib/ng-package.schema.json --output lib/ng-package.schema.ts",
     "prerelease": "yarn build",
-    "release": "standard-version --prerelease pre",
+    "release": "standard-version --message 'chore: cut release for v%s' --prerelease pre",
     "postrelease": "node prepublish.js",
     "publish:ci": "yarn prerelease && yarn postrelease",
     "samples": "node dist/cli/ng-packagr.js -p integration/sample_core/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_custom/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_material/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_typings/ng-package.json",
     "samples:dev": "node integration/build.js",
     "samples:test": "TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --compilers ts:ts-node/register integration/sample_*/specs/**/*.ts",
-    "test": "yarn build && yarn samples && yarn samples:test"
+    "test": "yarn build && yarn samples && yarn samples:test",
+    "commitmsg": "validate-commit-msg"
   }
 }
