feat: Added less support

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/platform-browser": "^4.2.0",
     "@types/chai": "^4.0.0",
     "@types/jasmine": "^2.5.51",
+    "@types/less": "^0.0.32",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.0",
     "@types/sinon": "^2.3.0",
@@ -60,6 +61,7 @@
     "husky": "^0.14.3",
     "jasmine": "^2.6.0",
     "json-schema-to-typescript": "^4.4.0",
+    "less": "^2.7.2",
     "mocha": "^3.4.2",
     "rxjs": "^5.4.0",
     "sinon": "^2.3.2",
