--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "release": "standard-version --message 'chore: cut release for v%s' --prerelease pre",
     "postrelease": "node prepublish.js",
     "publish:ci": "yarn prerelease && yarn postrelease",
-    "samples": "node dist/cli/ng-packagr.js -p integration/sample_core/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_custom/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_material/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_typings/ng-package.json",
+    "samples": "node dist/cli/ng-packagr.js -p integration/sample_core/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_custom/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_material/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_rxjs/ng-package.json && node dist/cli/ng-packagr.js -p integration/sample_typings/ng-package.json",
     "samples:dev": "node integration/build.js",
     "samples:test": "TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --compilers ts:ts-node/register integration/sample_*/specs/**/*.ts",
     "test": "yarn build && yarn samples && yarn samples:test",
