--- a/package.json
+++ b/package.json
@@ -73,11 +73,11 @@
   "scripts": {
     "prebuild": "rimraf dist && yarn schema",
     "build": "tsc -p tsconfig.packagr.json",
-    "postbuild": "node postbuild.js",
+    "postbuild": "node scripts/postbuild.js",
     "schema": "json2ts --input src/lib/ng-package.schema.json --output src/lib/ng-package.schema.ts",
     "prerelease": "yarn build",
     "release": "standard-version --message 'chore: cut release for v%s' --prerelease pre",
-    "postrelease": "node prepublish.js",
+    "postrelease": "node scripts/prepublish.js",
     "publish:ci": "yarn prerelease && yarn postrelease",
     "samples": "integration/samples.sh",
     "samples:dev": "node integration/samples.js",
