fix: strip utf-8 bom when reading files
Resolves #87

--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "gulp-inline-ng2-template": "^4.0.0",
     "less": "^2.7.2",
     "minimist": "^1.2.0",
-    "mz": "^2.6.0",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.2",
+    "read-file": "^0.2.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.45.0",
     "rollup-plugin-node-resolve": "^3.0.0",
