chore: update vscode launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "node",
       "request": "launch",
       "name": "yarn samples:dev",
-      "program": "${workspaceRoot}/integration/build.js"
+      "program": "${workspaceRoot}/integration/samples.js"
     }
   ],
   "compounds": []
