--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-packagr",
-  "version": "1.0.0-pre.17",
+  "version": "1.0.0",
   "description": "Compile and package a TypeScript library to Angular Package Format",
   "keywords": [
     "angular",
