feat: add stylus preprocessor support (#120)
* Implemented stylus preprocessor support
* Added stylus to dependencies in package.json 
* Added tests for relative resolves for stylus and included paths for node_modules

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup": "^0.49.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "sorcery": "^0.10.0",
+    "stylus": "^0.54.5",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.2",
     "uglify-js": "^3.0.7",
