--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "read-file": "^0.2.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "sorcery": "^0.10.0",
     "stylus": "^0.54.5",
