--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vinyl-fs": "^2.4.4"
   },
   "devDependencies": {
+    "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^4.2.0",
     "@angular/core": "^4.2.0",
     "@angular/http": "^4.2.0",
