chore: renovate karma packages (#148)

--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -35,12 +35,12 @@
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine-html-reporter": "~0.2.2",
+    "karma-coverage-istanbul-reporter": "~1.0.0",
     "protractor": "~5.1.0",
     "ts-node": "~3.3.0",
     "tslint": "~4.5.0",
