chore: renovate type definitions packages (#155)

--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -30,8 +30,8 @@
   "devDependencies": {
     "@angular/cli": "1.4.4",
     "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/jasmine": "~2.6.0",
+    "@types/node": "~8.0.0",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.0",
