--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@angular/cli": "1.4.4",
     "@angular/compiler-cli": "^4.0.0",
+    "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.6.0",
     "@types/node": "~8.0.0",
     "codelyzer": "~3.2.0",
