feat: resolve ng-package config from multiple sources

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "glob": "^7.1.2",
     "gulp-inline-ng2-template": "^4.0.0",
     "less": "^2.7.2",
+    "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.2",
@@ -59,6 +60,7 @@
     "@types/chai": "^4.0.0",
     "@types/jasmine": "^2.5.51",
     "@types/less": "^0.0.32",
+    "@types/lodash": "^4.14.77",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.0",
     "@types/sinon": "^2.3.0",
