--- a/integration/samples/package-json/package.json
+++ b/integration/samples/package-json/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../src/package.schema.json",
   "name": "@sample/package-json",
   "description": "A sample library with configuration in package.json",
   "version": "1.0.0-pre.0",
@@ -9,7 +10,6 @@
     "@angular/common": "^4.1.2"
   },
   "ngPackage": {
-    "$schema": "../../../src/lib/ng-package.schema.json",
     "lib": {
       "entryFile": "public_api.ts"
     }
