feat: dynamic secondary entry points

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^7.1.1",
     "browserslist": "^2.1.5",
     "cpx": "^1.5.0",
+    "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "gulp-inline-ng2-template": "^4.0.0",
     "less": "^2.7.2",
@@ -58,6 +59,7 @@
     "@commitlint/cli": "^4.0.0",
     "@commitlint/config-angular": "^3.1.1",
     "@types/chai": "^4.0.0",
+    "@types/fs-extra": "^4.0.2",
     "@types/jasmine": "^2.5.51",
     "@types/less": "^0.0.32",
     "@types/lodash": "^4.14.77",
