--- a/tsconfig.packagr.json
+++ b/tsconfig.packagr.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -17,6 +17,6 @@
     ]
   },
   "files": [
-    "src/lib/ng-packagr.ts"
+    "src/cli/main.ts"
   ]
 }
