fix: add description for `ngPackage` property in `package.json`
Motivation: IDE support

--- a/integration/samples/secondary/sub-module/package.json
+++ b/integration/samples/secondary/sub-module/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../../src/package.schema.json",
   "name": "@sample/secondary/sub-module",
   "description": "A sub module library",
   "version": "1.0.0-pre.0",
