fix: depend on user's typescript and tsc-wrapped (#268)
Previously, a user of ng-packagr could install an incompatible typescript version for ng-packagr. Prevent inadvertent typescript installs by depending on a user's typescript isntallation (peerDependencies). Same for tsc-wrapped.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "ng-packagr": "./cli/main.js"
   },
   "dependencies": {
-    "@angular/tsc-wrapped": "^4.4.5",
     "@ngtools/json-schema": "^1.1.0",
     "autoprefixer": "^7.1.1",
     "browserslist": "^2.1.5",
@@ -46,9 +45,12 @@
     "sorcery": "^0.10.0",
     "stylus": "^0.54.5",
     "ts-node": "^3.0.4",
-    "typescript": "^2.3.4",
     "uglify-js": "^3.0.7",
     "vinyl-fs": "^2.4.4"
+  },
+  "peerDependencies": {
+    "@angular/tsc-wrapped": "~4.4.5",
+    "typescript": "~2.3.4"
   },
   "devDependencies": {
     "@angular/cdk": "^2.0.0-beta.11",
@@ -56,6 +58,7 @@
     "@angular/core": "^4.4.5",
     "@angular/http": "^4.4.5",
     "@angular/platform-browser": "^4.4.5",
+    "@angular/tsc-wrapped": "~4.4.5",
     "@commitlint/cli": "^4.0.0",
     "@commitlint/config-angular": "^4.2.0",
     "@types/chai": "^4.0.0",
@@ -78,6 +81,7 @@
     "rxjs": "^5.4.0",
     "sinon": "^4.0.0",
     "standard-version": "^4.0.0",
+    "typescript": "~2.3.4",
     "zone.js": "^0.8.10"
   },
   "private": true,
