feat: add tsx/jsx support (#228)
Adding the ability to specify a jsx compiler option in the ng-package.json schema. This allows for libraries to bundle tsx/jsx files, and take depedencies on vendors like React components

--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@types/lodash": "^4.14.77",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.0",
+    "@types/react": "^16.0.19",
+    "@types/react-dom": "^16.0.2",
     "@types/sinon": "^2.3.0",
     "chai": "^4.0.1",
     "copyfiles": "^1.2.0",
@@ -78,6 +80,8 @@
     "jasmine": "^2.6.0",
     "json-schema-to-typescript": "^4.4.0",
     "mocha": "^4.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "rxjs": "^5.4.0",
     "sinon": "^4.0.0",
     "standard-version": "^4.0.0",
