--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
   },
   "peerDependencies": {
     "@angular/tsc-wrapped": "~4.4.5",
-    "typescript": "~2.3.4"
+    "typescript": "~2.4.2"
   },
   "devDependencies": {
-    "@angular/cdk": "^2.0.0-beta.11",
-    "@angular/common": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/http": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
+    "@angular/cdk": "~5.0.0-rc0",
+    "@angular/common": "~5.0.0",
+    "@angular/core": "~5.0.0",
+    "@angular/http": "~5.0.0",
+    "@angular/platform-browser": "~5.0.0",
     "@angular/tsc-wrapped": "~4.4.5",
     "@commitlint/cli": "^4.0.0",
     "@commitlint/config-angular": "^4.2.0",
@@ -85,7 +85,7 @@
     "rxjs": "^5.4.0",
     "sinon": "^4.0.0",
     "standard-version": "^4.0.0",
-    "typescript": "~2.3.4",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.10"
   },
   "private": true,
