--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,21 +33,16 @@ jobs:
           name: Deploy Git tag to npm registry
           command: |
             GIT_TAG=$(git tag -l --points-at HEAD)
+            NPM_TAG=latest
             if [[ "${GIT_TAG}" =~ v([0-9]+)\.([0-9]+)\.([0-9]+)-([a-zA-Z]+)\..* ]]; then
-              echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-              yarn publish:ci
-              # Publish prerelease version with tag to npm registry
-              pushd dist
-              npm publish --tag next
-              npm pack .
-            elif [[ "${GIT_TAG}" =~ v.* ]]; then
-              echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-              yarn publish:ci
-              # Pack and publish latest version to npm registry
-              push dist
-              npm publish
-              npm pack .
+              NPM_TAG=next
             fi
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+            yarn publish:ci
+            # Pack and publish latest version to npm registry
+            push dist
+            npm publish --tag ${NPM_TAG}
+            npm pack .
 
 workflows:
   version: 2
