--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,11 @@
       "pinVersions": false
     },
     {
+      "packagePattern": "^@commitlint\/.*",
+      "groupName": "commitlint",
+      "pinVersions": false
+    },
+    {
       "packagePattern": "^@types\/.*",
       "groupName": "type definitions",
       "pinVersions": false
