test: integration test for rxjs lettable operators (#314)

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@angular/compiler-cli": "~5.0.0",
     "@angular/core": "~5.0.0",
     "@angular/http": "~5.0.0",
+    "@angular/language-service": "~5.0.0",
     "@angular/platform-browser": "~5.0.0",
     "@commitlint/cli": "^5.0.0",
     "@commitlint/config-angular": "^5.0.0",
