--- a/integration/samples/custom/package.json
+++ b/integration/samples/custom/package.json
@@ -7,5 +7,8 @@
   "peerDependencies": {
     "@angular/core": "^4.1.3",
     "@angular/common": "^4.1.3"
+  },
+  "scripts": {
+    "test": "../../../node_modules/.bin/cross-env TS_NODE_PROJECT=../../../integration/tsconfig.specs.json ../../../node_modules/.bin/mocha --compilers ts:ts-node/register specs/**/*.ts"
   }
 }
