--- a/integration/samples/secondary/package.json
+++ b/integration/samples/secondary/package.json
@@ -9,6 +9,9 @@
     "@angular/core": "^4.1.2",
     "@angular/common": "^4.1.2"
   },
+  "scripts": {
+    "test": "../../../node_modules/.bin/cross-env TS_NODE_PROJECT=../../../integration/tsconfig.specs.json ../../../node_modules/.bin/mocha --compilers ts:ts-node/register specs/**/*.ts"
+  },
   "ngPackage": {
     "lib": {
       "entryFile": "public_api.ts"
