--- a/integration/tsconfig.specs.json
+++ b/integration/tsconfig.specs.json
@@ -3,6 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "target": "es5",
+    "allowJs": true,
     "experimentalDecorators": true,
     "lib": [
       "es2015",
